# test-wxwidgets

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt
include/: cApp.h  cMain.h
src/: cApp.cpp  cMain.cpp
